@@ -1,0 +1,2 @@
+# Enter the path to the folder that includes your wallpapers
+wallpaper_folder=$HOME/wallpaper
